--- a/aula02/app-api/.env
+++ b/aula02/app-api/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:EsNyuM4xl3H7kkBEUOjhfi71pw+pXH97QC6CwE7mKOw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
